[package]
name = "cargo-thanks"
version = "0.1.3"
description = "a cargo subcommand for giving thanks"
authors = ["softprops <d.tangren@gmail.com>"]
homepage = "https://github.com/softprops/cargo-thanks"
repository = "https://github.com/softprops/cargo-thanks"
keywords = ["hyper", "github"]
license = "MIT"
readme = "README.md"

[dependencies]
env_logger = "0.3"
log = "0.3"
clap = "2.27"
yansi = "0.3"
futures = "0.1"
hyper = "0.11"
hyper-tls = "0.1"
cargo_metadata = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
error-chain = "0.11"
tokio-core = "0.1.8"
url = "1.6"
url_serde = "0.2"
hubcaps = "0.4"