[package]
name = "cargo-thanks"
version = "0.1.3"
description = "a cargo subcommand for giving thanks"
authors = ["softprops <d.tangren@gmail.com>"]
homepage = "https://github.com/softprops/cargo-thanks"
repository = "https://github.com/softprops/cargo-thanks"
keywords = ["hyper", "github"]
license = "MIT"
readme = "README.md"

[dependencies]
env_logger = "0.5.10"
log = "0.4.3"
clap = "2.32.0"
yansi = "0.4.0"
futures = "0.1.23"
hyper = "0.12.6"
hyper-tls = "0.3.0"
cargo_metadata = "0.6.0"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
error-chain = "0.12.0"
tokio-core = "0.1.17"
url = "1.7.1"
url_serde = "0.2.0"
hubcaps = "0.4.9"
