[package]
name = "cargo-thanks"
version = "0.1.3"
description = "a cargo subcommand for giving thanks"
authors = ["softprops <d.tangren@gmail.com>"]
homepage = "https://github.com/softprops/cargo-thanks"
repository = "https://github.com/softprops/cargo-thanks"
keywords = ["hyper", "github"]
license = "MIT"
readme = "README.md"

[dependencies]
env_logger = "0.6"
log = "0.4"
clap = "2"
yansi = "0.5"
futures = "0.1.23"
hyper = "0.12"
hyper-tls = "0.3"
cargo_metadata = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
error-chain = "0.12.0"
tokio-core = "0.1.17"
url = "1.7.1"
url_serde = "0.2.0"
hubcaps = "0.4.9"
